--- a/content/project/internal-project-2/index.Rmd
+++ b/content/project/internal-project-2/index.Rmd
@@ -36,10 +36,12 @@ cars <- c(1, 3, 6, 1, 1, 1, 2, 3, 4, 5)
 plot(cars)
 
 library(bupaR)
+library(processanimateR)
 eldata <- read_xes("G:/OneDrive/Documents/buparProject/data/GT_p1_t1.xes")
 process_map(eldata)
 
 animate_process(eldata)
+
 
 # eldata
 nrow(eldata)
