--- a/content/project/internal-project-2/index.Rmd
+++ b/content/project/internal-project-2/index.Rmd
@@ -1,9 +1,9 @@
 ---
-title: Internal Project2
+title: Process Mining
 summary: An example of using the in-built project page.
 tags:
-- Deep Learning
-date: "2016-04-27T00:00:00Z"
+- Process Mining
+date: "2020-08-10T00:00:00Z"
 
 # Optional external URL for project (replaces project detail page).
 external_link: ""
