--- a/content/project/internal-project-2/index.Rmd
+++ b/content/project/internal-project-2/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Process Mining
-summary: An example of using the in-built project page.
+summary: On using data analysis to understand business processes
 tags:
 - Process Mining
 date: "2020-08-10T00:00:00Z"
@@ -12,11 +12,7 @@ image:
   caption: Photo by rawpixel on Unsplash
   focal_point: Smart
 
-links:
-- icon: twitter
-  icon_pack: fab
-  name: Follow
-  url: https://twitter.com/georgecushen
+
 url_code: ""
 url_pdf: ""
 url_slides: ""
