--- a/content/project/internal-project-3/index.Rmd
+++ b/content/project/internal-project-3/index.Rmd
@@ -27,16 +27,10 @@ slides: example
 ---
 This is a continuation on the topic of process mining. 
 
-```{r get_the_data, warning=FALSE, message=FALSE}
+```{r get_the_data, echo=FALSE, warning=FALSE, message=FALSE}
 
 library(readxl)
 auditextract <- read_excel("G:/OneDrive/Documents/bupaR/AuditExtract1.xlsx")
-
-```
-
-Load up the required bupaR libraries again.
-
-```{r create_event_log, warning=FALSE, message=FALSE}
 
 library(bupaR)
 library(processanimateR)
@@ -53,13 +47,6 @@ el <- auditextract %>%
     resource_id = "ResourceName2"
   )
 
-# animate_process(eldata)
-# nrow(el)
-
-```
-
-
-```{r do_collapse, warning=FALSE, message=FALSE}
 library(dplyr)
 qs <- auditextract %>% distinct(objectTypeDesc, StatusDescription)
 
@@ -70,6 +57,7 @@ el <- el %>%
   act_collapse(ProcessDocuments = filter(qs, objectTypeDesc=='Process Documents')$StatusDescription) %>%
   act_collapse(Disburse = filter(qs, objectTypeDesc=='Disburse')$StatusDescription) %>%
   act_collapse(StartDocuments = filter(qs, objectTypeDesc=='Start Documents')$StatusDescription) 
+
 ```
 
 One of bupaR's coolest features is the ability to animate a process. Check this out:
@@ -80,5 +68,4 @@ animate_process(el)
 
 
 
-More to come ...
 
