--- a/content/project/internal-project-3/index.Rmd
+++ b/content/project/internal-project-3/index.Rmd
@@ -51,7 +51,7 @@ el <- auditextract %>%
 library(dplyr)
 qs <- auditextract %>% distinct(objectTypeDesc, StatusDescription)
 
-el <- el %>%
+elc <- el %>%
   act_collapse(StartApplication = filter(qs, objectTypeDesc=='Start Application')$StatusDescription) %>%
   act_collapse(UploadDocuments = filter(qs, objectTypeDesc=='Upload Documents')$StatusDescription) %>%
   act_collapse(Settlement = filter(qs, objectTypeDesc=='Settlement')$StatusDescription) %>%
@@ -61,31 +61,39 @@ el <- el %>%
 
 ```
 
-One of bupaR's coolest features is the ability to animate a process. The animation represents the movement of cases through the processes, based on the timing data. Check this out:
+One of bupaR's coolest features is the ability to **animate** a process. The animation represents the movement of cases through the processes, based on the timing data. Check this out:
 
 ```{r animate_1, warning=FALSE, message=FALSE}
-animate_process(el)
+animate_process(elc)
 ```
 
 In the following sections, I'll list a quick rundown of a few more features from bupaR. Really, this is just scratching the surface of what bupaR and process mining can provide - I encourage you if you're interested in this topic to check out bupaR and start a journey of your own.
 
-We can add a measure of performance in terms of timing to the process map. Here I've added median minutes for the activities, with a view of relative frequencies (replacing the absolute frequencies we saw earlier). We can see clearly now that the movement from "Upload Documents" to "Process Documents" is the heaviest consumer of the timing at over 78 minutes:
+We can add a measure of **performance** in terms of timing to the process map. Here I've added median minutes for the activities, with a view of relative frequencies (replacing the absolute frequencies we saw earlier). We can see clearly now that the movement from "Upload Documents" to "Process Documents" is the heaviest consumer of the timing at over 78 minutes:
 
 ```{r process_map_performance, warning=FALSE, message=FALSE}
-el %>%
-process_map(type_nodes = frequency("relative_case"), performance(median, "mins", color_scale = "Purples"))
+elc %>%
+  process_map(type_nodes = frequency("relative_case"), performance(median, "mins", color_scale = "Purples"))
 
 ```
 
+How is the ***workload** distributed amongst the team ? Let's have a look at just that Settlement activity and see:
 
 ```{r process_map_resource1, warning=FALSE, message=FALSE}
 el %>%
   filter(objectTypeDesc == 'Settlement') %>%
   resource_involvement("resource") %>%
-  plot
+  plot()
+```
+ 
+In buparR, "traces" show the different activity sequences that occur. It may be of interest to view both the most common and least common sequences. Here we will narrow down again to just that Settlement activity to see how the statuses move in different sequences within there:
+
+```{r process_map_traces1, warning=FALSE, message=FALSE}
+el %>%
+  filter(objectTypeDesc == 'Settlement') %>%
+  trace_explorer(coverage = 0.5)
 ```
 
 
-
-
+Thanks for reading !
 
