--- a/content/project/internal-project-2/index.Rmd
+++ b/content/project/internal-project-2/index.Rmd
@@ -26,7 +26,7 @@ url_video: ""
 slides: example
 ---
 
-Big Processes are a Big Topic in data analytics. This is particularly true of late in enterprises who are placing a heavy emphasis on operational efficiency and are looking to instill a culture of continuous improvement.
+Big Processes are a Big Topic in data analytics. This is particularly true in today's enterprises who are placing a heavy emphasis on operational efficiency and are looking to instill a culture of continuous improvement.
 
 "Process mining" is a set of analytical techniques we can use to gain insights into the following types of questions:
 
@@ -115,8 +115,9 @@ process_map(el)
 
 Now we can start to get a picture of what's going on in there ! 
 
-The default provides is annotated with frequencies of activity flow - for example we can see 9 cases moved from the start to "Start Application", 19 moved to "Process Documents" and so on. 
+The default provides is annotated with frequencies of activity flow.
 
-In [Part 2 of Process Mining](/project/internal-project-3/) I'll show a little more of the capabilities of analysis of processes including how to animate the process map !
+In [Part 2 of Process Mining](/project/internal-project-3/) I'll show a little more of the capabilities of analysis of processes including how to animate the process map ! 
+
 
 
